# llvm-project

llvm/: CMakeLists.txt
llvm/VMinterpreter/: CMakeLists.txt  bytecode.md
llvm/VMinterpreter/include/: vminterpreter.h
llvm/VMinterpreter/src/: vmexecute.c  vmprint.c
llvm/include/llvm/Transforms/IPO/: VMCodeGen.h
llvm/lib/Passes/: CMakeLists.txt  PassBuilder.cpp  PassBuilderPipelines.cpp  PassRegistry.def
llvm/lib/Passes/Obfuscation/: BogusControlFlow.cpp  Flattening.cpp  IPObfuscationContext.cpp  StringEncryption.cpp  StringObfuscation.cpp  StringObfuscation.h  Substitution.h  Utils.cpp  xVMP.cpp  xVMP.h
llvm/lib/Transforms/IPO/: CMakeLists.txt  VMCodeGen.cpp
